test/parsing/errors/visitor-missing-before.boa
visit(input, visitor {
	n: Revision -> stop;
	n: ChangedFile -> stop;
});
